--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,14 @@
 [build-system]
     requires = ["setuptools>=42"]
     build-backend = "setuptools.build_meta"
+
+[tool.black]
+    line-length = 79
+    target-version = ["py311"]
+    include = '\.pyi??$'
+
+[tool.isort]
+    profile = "black"
+    multi_line_output = 3
+    py_version = 310
+    line_length = 79
