--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,10 @@
 [options]
 packages = find:
-python_requires = >=3.8
+python_requires = >=3.11
 install_requires =
     pandas>=1.5.1<2.0.0
+    pre-commit>=2.2.0<3.0.0
+    black>=22.10.0<23.0.0
+    flake8>=6.0.0<7.0.0
+    isort>=5.10.1<6.0.0
+    pytest>=7.2.0<8.0.0
